Updated OpenCL formula codes and UIs

--- a/mandelbulber2/formula/ui/abox_mod2.ui
+++ b/mandelbulber2/formula/ui/abox_mod2.ui
@@ -1208,7 +1208,7 @@
 &lt;a href=&quot;This formula contains aux.color and aux.actualScale&quot;&gt;This formula contains aux.color and aux.actualScale&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;aboxmod2_001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
