--- a/mandelbulber2/formula/ui/abox_mod_kali_eiffie.ui
+++ b/mandelbulber2/formula/ui/abox_mod_kali_eiffie.ui
@@ -1239,7 +1239,7 @@
 &lt;a href=&quot;This formula contains aux.color&quot;&gt;This formula contains aux.color&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;aboxmodkalieiffie_001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
