--- a/mandelbulber2/formula/ui/transf_step_xy.ui
+++ b/mandelbulber2/formula/ui/transf_step_xy.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_step</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -164,31 +164,14 @@ scale</string>
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_75" columnstretch="0,0">
+    <layout class="QGridLayout" name="gridLayout_75" columnstretch="0,1">
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="1" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
-       <property name="text">
-        <string notr="true">floor</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_110">
        <property name="text">
-        <string>offset:</string>
+        <string>step offset:</string>
        </property>
       </widget>
      </item>
@@ -221,6 +204,13 @@ scale</string>
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
+     <property name="text">
+      <string notr="true">floor</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledAy">
@@ -422,7 +412,7 @@ scale</string>
    <item>
     <widget class="MyCheckBox" name="checkBox_transf_function_enabledAw_false">
      <property name="text">
-      <string notr="true">zc</string>
+      <string notr="true">disable z = zc</string>
      </property>
     </widget>
    </item>
