--- a/mandelbulber2/formula/ui/transf_abs_add_tglad_fold.ui
+++ b/mandelbulber2/formula/ui/transf_abs_add_tglad_fold.ui
@@ -543,7 +543,7 @@ z = abs( z + constant) - abs( z - constant) - z;</string>
         <property name="text">
          <string notr="true">&lt;p&gt;abs add tglad fold,  z = fabs( z + constant) -fabs( z - constant) - z:&lt;br&gt;with a fold tweak option&lt;br&gt;This formula contains aux.color&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/Caves-PseudoKleinianMod2.fract&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/Caves2-PseudoKleinianMod2.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_cylinder.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_octahedron.fract&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/Caves-PseudoKleinianMod2.fract&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/Caves2-PseudoKleinianMod2.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
